--- a/src/styles/AllRoutines.css
+++ b/src/styles/AllRoutines.css
@@ -1,4 +1,4 @@
-main {
+.allroutines {
     max-width: 60em;
     line-height: 1.5;
     padding: 1em 1em;
